Childbrowser works fine on Android. Note that the second start of CB crashes the app on iOS, but that is a know issue.. and we won't release an iOS version shortly.

--- a/css/gametv.custom.css
+++ b/css/gametv.custom.css
@@ -128,8 +128,8 @@ li.ui-btn {
   position: relative;
   width:122px;
   height: 30px;
-  /*margin-top:-34px;*/
-  /*margin-left: 92px;*/
+  margin-top:-34px;
+  margin-left: 92px;
   cursor: pointer;
-  border: 1px solid #ccc;
+  /*border: 1px solid #ccc;*/
 }
